k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  namespace: java-space
  labels:
    app: java-tomcat
spec:
  replicas: 4
  selector:
    matchLabels:
      app: java-tomcat
  template:
    metadata:
      labels:
        app: java-webapp
    spec:
      containers:
      - name: java-container
        image: 516035830226.dkr.ecr.ap-south-1.amazonaws.com/sathish-repo:number 
        ports:
        - containerPort: 8080
