k8s/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
 name: java-ingress
 namespace: java-space
spec:
 rules:
 - host: jenkins.sathishji.xyz
   http:
     paths:
     - path:
       backend:
         serviceName: java-service
         servicePort: 80
